[package]
name = "rusty_blue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pcap = "*"
term = "0.7.0"
clap = { version = "3.1", features = ["derive"] }
byteorder = "1.4.3"
hex = "0.4.3"
serde_yaml = "0.8.7"
dns-lookup = "1.0.8"

